--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             </div>
         </div>
     </div>
-    <script src="Chalenge4-CountUpInput.js" defer></script>
+    <script src="app.js" defer></script>
+    <!-- <script src="Chalenge4-CountUpInput.js" defer></script> -->
     <!-- <script src="Chalenge3-CountDownInput.js" defer></script> -->
 </body>
 
